Fix haskell/haddock#303. Hide footer when printing
The "Produced by Haddock" footer was overlapping the page's body when printing.
This patch hides the footer with a css media rule.

--- a/haddock-api/resources/html/Ocean.std-theme/ocean.css
+++ b/haddock-api/resources/html/Ocean.std-theme/ocean.css
@@ -183,6 +183,9 @@ pre {
 .keyword { font-weight: normal; }
 .def { font-weight: bold; }
 
+@media print {
+  #footer { display: none; }
+}
 
 /* @end */
 
